dibs-qgen/src/sqlgen/snapshots/dibs_qgen__sqlgen__update__tests__simple_update.snap
---
source: crates/dibs-qgen/src/sqlgen/update.rs
assertion_line: 86
expression: result.sql
---
UPDATE "users"
SET "email" = $1
WHERE "id" = $2
RETURNING "id", "email"
