dibs-qgen/src/sqlgen/snapshots/dibs_qgen__sqlgen__update__tests__update_multiple_conditions.snap
---
source: crates/dibs-qgen/src/sqlgen/update.rs
assertion_line: 118
expression: result.sql
---
UPDATE "products"
SET "status" = $1, "updated_at" = NOW()
WHERE "user_id" = $2 AND "status" = $3
RETURNING "id", "status"
