dibs-qgen/src/sqlgen/snapshots/dibs_qgen__sqlgen__update__tests__update_shorthand_params.snap
---
source: crates/dibs-qgen/src/sqlgen/update.rs
assertion_line: 134
expression: result.sql
---
UPDATE "users"
SET "name" = $1, "email" = $2
WHERE "id" = $3
RETURNING "id"
